--- a/project/backend/package.json
+++ b/project/backend/package.json
@@ -10,12 +10,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/speech": "^6.7.0",
+    "axios": "^1.7.8",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.3",
     "google-translate-api": "^2.3.0",
     "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.73.1",
     "whisper": "^0.3.3"
   }
 }
